--- a/index.html
+++ b/index.html
@@ -16,17 +16,7 @@
         <li><a href="cv.html">CV</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
-      <div id="accesibilidad">
-        <button id="fontUp" title="Aumentar tamaño de fuente">A+</button>
-        <button id="fontDown" title="Disminuir tamaño de fuente">A-</button>
-        <button id="fontFamily" title="Cambiar fuente">Fuente</button>
-        <button id="darkMode" title="Modo oscuro">🌙</button>
-        <button id="highContrast" title="Alto contraste">Contraste</button>
-        <button id="daltonico" title="Modo daltonismo">Daltonismo</button>
-        <button id="toggleCursor" title="Cambiar cursor">Cursor</button>
-        <button id="removeImages" title="Quitar imágenes">Sin imágenes</button>
-        <button id="toggleLinks" title="Quitar/sobresaltar links">Links</button>
-      </div>
+      <div id="ajustes-inject"></div>
     </nav>
   </header>
 
@@ -44,6 +34,16 @@
     <p>&copy; 2024 Tu Nombre | ODS Acción por el Clima</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <!-- Solo este script -->
+  <script>
+    fetch('ajustes.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('ajustes-inject').outerHTML = html;
+        const script = document.createElement('script');
+        script.src = 'js/accesibilidad.js';
+        document.body.appendChild(script);
+      });
+  </script>
 </body>
 </html>
