--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>ODS Acción por el Clima | Inicio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/accesibilidad.css">
 </head>
 <body>
   <header>
