--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <title>ODS Acción por el Clima | Inicio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Estilos generales -->
   <link rel="stylesheet" href="css/styles.css">
-  <!-- Estilos de ajustes/accesibilidad -->
   <link rel="stylesheet" href="css/accesibilidad.css">
   <link rel="icon" href="data:,">
 </head>
@@ -20,34 +18,32 @@
         <li><a href="cv.html">CV</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
-      <!-- Aquí se inyectará el menú de ajustes -->
       <div id="ajustes-inject"></div>
     </nav>
   </header>
-
   <main>
     <section class="card">
-      <h1>ODS 13: Acción por el Clima</h1>
+      <h1 style="font-size: 2.2em; margin-bottom: 0.5em;">ODS 13: Acción por el Clima</h1>
       <p>
-        Bienvenido al sitio dedicado a concientizar sobre el cambio climático y cómo todos podemos contribuir a combatirlo.  
+        Bienvenido al sitio dedicado a concientizar sobre el cambio climático y cómo todos podemos contribuir a combatirlo.
         Aquí encontrarás información clara y acciones cotidianas para marcar la diferencia.
       </p>
       <img src="assets/clima.jpg" alt="Ilustración sobre el cambio climático" width="400" style="max-width: 100%; border-radius: 1em; margin-top: 1em;">
     </section>
   </main>
-
   <footer>
     <p>&copy; 2024 Tu Nombre | ODS Acción por el Clima</p>
   </footer>
-
   <script>
-    // Inyecta el menú de ajustes y luego el JS de accesibilidad
+    // Inyecta el HTML y luego CARGA el JS cuando ya está en el DOM
     fetch('ajustes.html')
       .then(res => res.text())
       .then(html => {
         document.getElementById('ajustes-inject').outerHTML = html;
-        const script = document.createElement('script');
+        // Solo después de inyectar el HTML, carga y ejecuta el JS
+        var script = document.createElement('script');
         script.src = 'js/accesibilidad.js';
+        script.defer = true;
         document.body.appendChild(script);
       });
   </script>
