--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
     <section class="card contact-card">
       <h1>Contacto</h1>
       <p>¿Tienes alguna pregunta, sugerencia o comentario? Rellena el siguiente formulario:</p>
-      <form id="contactForm" method="POST" action="https://formsubmit.co/tu-correo@dominio.com" autocomplete="off" novalidate>
+      <form id="contactForm" method="POST" action="https://formsubmit.co/ccobian8@ucol.mx" autocomplete="off" novalidate>
         <div class="form-group">
           <label for="nombre">Nombre completo *</label>
           <input type="text" id="nombre" name="nombre" required minlength="2" maxlength="60" pattern="^[a-zA-ZáéíóúÁÉÍÓÚüÜñÑ\\s\\.\\-']+$" autocomplete="off">
