Correccion y prueba de ajustes #5 y se implemento una seccion de mas seguridad

--- a/contacto.html
+++ b/contacto.html
@@ -95,5 +95,7 @@
   <script src="js/captcha-img.js" defer></script>
   <script src="js/captcha-check.js" defer></script>
   <script src="js/contacto.js" defer></script>
+  <script src="seguridad/seguridad.js" defer></script>
+
 </body>
 </html>
