Mejora de contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Contacto | ODS Acción por el Clima</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../css/contacto.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/accesibilidad.css">
   <link rel="icon" href="data:,">
@@ -106,5 +107,6 @@
   <script src="../js/captcha-check.js" defer></script>
   <script src="../js/contacto.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
+  
 </body>
 </html>
