Vista de CV prueba#2

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -1,84 +1,85 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi CV - ODS 13 Acción por el Clima</title>
-    <link rel="stylesheet" href="css/cv.css">
-    <link rel="stylesheet" href="css/ajustes.css">
-    <link rel="icon" type="image/png" href="assets/ods13-logo.png">
+  <meta charset="UTF-8">
+  <title>CV | ODS Acción por el Clima</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../css/cv.css">
+  <link rel="icon" href="../favicon.png" type="image/png">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="cambio-climatico.html">¿Qué es?</a></li>
-                <li><a href="acciones.html">Acciones</a></li>
-                <li><a href="ajustes.html">Ajustes</a></li>
-                <li><a href="cv.html" aria-current="page">CV</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="cv-intro">
-            <img src="assets/avatar.png" alt="Fotografía de perfil" class="cv-avatar" />
-            <div>
-                <h1>Nombre Apellido</h1>
-                <p><strong>Carrera:</strong> Ing. en Sistemas Computacionales</p>
-                <p><strong>Email:</strong> tu.email@ejemplo.com</p>
-                <p><strong>Ubicación:</strong> Ciudad, País</p>
-            </div>
-        </section>
-        <section class="cv-section">
-            <h2>Perfil Profesional</h2>
-            <p>
-                Apasionado por la tecnología, el desarrollo web y la protección del medio ambiente. Busco aplicar mis conocimientos en proyectos innovadores relacionados con los Objetivos de Desarrollo Sostenible.
-            </p>
-        </section>
-        <section class="cv-section">
-            <h2>Formación Académica</h2>
-            <div class="cv-cards">
-                <article class="cv-card">
-                    <h3>Licenciatura en Sistemas Computacionales</h3>
-                    <p>Universidad XYZ | 2021 - Actualidad</p>
-                </article>
-                <article class="cv-card">
-                    <h3>Bachillerato Tecnológico</h3>
-                    <p>CBTis 123 | 2018 - 2021</p>
-                </article>
-            </div>
-        </section>
-        <section class="cv-section">
-            <h2>Experiencia</h2>
-            <div class="cv-cards">
-                <article class="cv-card">
-                    <h3>Desarrollador Web Junior</h3>
-                    <p>Proyecto ODS 13 | 2024</p>
-                    <ul>
-                        <li>Diseño y desarrollo de sitio web educativo sobre acción por el clima.</li>
-                        <li>Implementación de funciones de accesibilidad y buenas prácticas de seguridad.</li>
-                    </ul>
-                </article>
-                <!-- Puedes agregar más experiencias aquí -->
-            </div>
-        </section>
-        <section class="cv-section">
-            <h2>Habilidades</h2>
-            <ul class="cv-skills">
-                <li>HTML5 y CSS3</li>
-                <li>JavaScript</li>
-                <li>Control de versiones (Git)</li>
-                <li>Desarrollo responsivo</li>
-                <li>Accesibilidad web</li>
-                <li>Trabajo en equipo</li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 ODS 13 | Proyecto estudiantil</p>
-    </footer>
-    <script src="js/ajustes.js"></script>
-    <!-- Si tienes más JS, agrégalo aquí -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="cambio-climatico.html">¿Qué es?</a></li>
+        <li><a href="acciones.html">Acciones</a></li>
+        <li><a href="cv.html" aria-current="page">CV</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="cv-header">
+      <img src="../assets/avatar.png" alt="Fotografía de perfil" class="cv-avatar" />
+      <div class="cv-header-info">
+        <h1>Nombre Apellido</h1>
+        <p><strong>Carrera:</strong> Ing. en Sistemas Computacionales</p>
+        <p><strong>Email:</strong> tu.email@ejemplo.com</p>
+        <p><strong>Ubicación:</strong> Ciudad, País</p>
+      </div>
+    </div>
+
+    <section class="cv-section">
+      <h2>Perfil Profesional</h2>
+      <p>
+        Apasionado por la tecnología, el desarrollo web y la protección del medio ambiente. Busco aplicar mis conocimientos en proyectos innovadores relacionados con los Objetivos de Desarrollo Sostenible.
+      </p>
+    </section>
+
+    <section class="cv-section">
+      <h2>Formación Académica</h2>
+      <div class="cv-cards">
+        <div class="cv-card">
+          <h3>Licenciatura en Sistemas Computacionales</h3>
+          <p>Universidad XYZ | 2021 - Actualidad</p>
+        </div>
+        <div class="cv-card">
+          <h3>Bachillerato Tecnológico</h3>
+          <p>CBTis 123 | 2018 - 2021</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="cv-section">
+      <h2>Experiencia</h2>
+      <div class="cv-cards">
+        <div class="cv-card">
+          <h3>Desarrollador Web Junior</h3>
+          <p>Proyecto ODS 13 | 2024</p>
+          <ul>
+            <li>Diseño y desarrollo de sitio web educativo sobre acción por el clima.</li>
+            <li>Implementación de funciones de accesibilidad y buenas prácticas de seguridad.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="cv-section">
+      <h2>Habilidades</h2>
+      <ul class="cv-skills">
+        <li>HTML5 y CSS3</li>
+        <li>JavaScript</li>
+        <li>Control de versiones (Git)</li>
+        <li>Desarrollo responsivo</li>
+        <li>Accesibilidad web</li>
+        <li>Trabajo en equipo</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2024 Tu Nombre | ODS Acción por el Clima</p>
+  </footer>
+  <script src="../js/cv.js"></script>
 </body>
 </html>
