Vista de Contaco mejorada  prueba #5

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,9 +7,7 @@
   <link rel="stylesheet" href="../css/contacto.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/accesibilidad.css">
-  <link rel="icon" href="data:,">
   <link rel="icon" href="../favicon.png" type="image/png">
-
 </head>
 <body>
   <header>
@@ -93,6 +91,9 @@
     <p>&copy; 2024 Tu Nombre | ODS Acción por el Clima</p>
   </footer>
 
+  <!-- Animación de entrada -->
+  <script src="../js/animacion-vista.js"></script>
+  <!-- Ajustes -->
   <script>
     fetch('../ajustes.html')
       .then(res => res.text())
@@ -107,6 +108,5 @@
   <script src="../js/captcha-check.js" defer></script>
   <script src="../js/contacto.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
-  
 </body>
 </html>
