--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
   <meta charset="UTF-8">
   <title>ODS Acción por el Clima | Inicio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/accesibilidad.css">
-  <link rel="icon" href="data:,">
-  <link rel="icon" href="favicon.png" type="image/png">
 
+  <!-- Estilos globales -->
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- Estilos específicos de la portada -->
+  <link rel="stylesheet" href="css/inicio.css">
+  <!-- Accesibilidad – se reutiliza en todas las vistas -->
+  <link rel="stylesheet" href="css/accesibilidad.css">
+
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
+  <!-- ===== HEADER / NAV ===== -->
   <header>
     <nav>
       <ul>
@@ -24,31 +29,74 @@
     </nav>
   </header>
 
+  <!-- ===== MAIN CONTENT ===== -->
   <main>
-    <section class="card">
-      <h1 style="font-size: 2.2em; margin-bottom: 0.5em;">ODS 13: Acción por el Clima</h1>
-      <p>
-        Bienvenido al sitio dedicado a concientizar sobre el cambio climático y cómo todos podemos contribuir a combatirlo.
-        Aquí encontrarás información clara y acciones cotidianas para marcar la diferencia.
-      </p>
-      <img src="assets/clima.jpg" alt="Ilustración sobre el cambio climático" width="400" style="max-width: 100%; border-radius: 1em; margin-top: 1em;">
+    <!-- Hero / Bienvenida -->
+    <section class="card hero">
+      <div class="hero-texto">
+        <h1>Bienvenido a&nbsp;<span>ODS 13</span></h1>
+        <p>
+          Este sitio está dedicado a difundir conocimiento y acciones sobre el <b>cambio climático</b>.  
+          Explora, aprende y actúa: juntos podemos marcar la diferencia para nuestro planeta.
+        </p>
+        <div class="hero-cta">
+          <a class="btn-primary" href="pages/cambio-climatico.html">Descubre qué es el ODS 13</a>
+          <a class="btn-outline"  href="pages/acciones.html">Empieza a actuar hoy</a>
+        </div>
+      </div>
+      <!-- Imagen ilustrativa (puedes cambiarla después) -->
+      <div class="hero-imagen">
+        <img src="assets/clima.jpg" alt="Ilustración sobre el cambio climático">
+      </div>
+    </section>
+
+    <!-- Tarjetas de acceso rápido -->
+    <section class="cards-grid">
+      <article class="card acceso">
+        <h2>¿Qué es el ODS 13?</h2>
+        <p>Comprende los objetivos, metas e indicadores del compromiso climático mundial.</p>
+        <a href="pages/cambio-climatico.html" class="link-card">Leer más</a>
+      </article>
+
+      <article class="card acceso">
+        <h2>Acciones diarias</h2>
+        <p>Ideas simples para reducir tu huella de carbono en casa, trabajo y comunidad.</p>
+        <a href="pages/acciones.html" class="link-card">Ver acciones</a>
+      </article>
+
+      <article class="card acceso">
+        <h2>Conoce al autor</h2>
+        <p>Formación, experiencia y habilidades detrás de este proyecto educativo.</p>
+        <a href="pages/cv.html" class="link-card">Ver CV</a>
+      </article>
+
+      <article class="card acceso">
+        <h2>Contacto</h2>
+        <p>¿Dudas o sugerencias? Escríbenos y trabajemos juntos por un futuro sostenible.</p>
+        <a href="pages/contacto.html" class="link-card">Ir a contacto</a>
+      </article>
     </section>
   </main>
 
+  <!-- ===== FOOTER ===== -->
   <footer>
-    <p>&copy; 2024 Tu Nombre | ODS Acción por el Clima</p>
+    <p>&copy; 2024 Tu Nombre | ODS 13 Acción por el Clima</p>
   </footer>
 
-  <!-- Scripts -->
+  <!-- ===== SCRIPTS ===== -->
+  <!-- animación de entrada que compartes con las demás vistas -->
+  <script src="js/animacion-vista.js"></script>
   <script src="seguridad/seguridad.js" defer></script>
+
+  <!-- inyección de botón de ajustes + script de accesibilidad -->
   <script>
     fetch('ajustes.html')
-      .then(res => res.text())
+      .then(r => r.text())
       .then(html => {
         document.getElementById('ajustes-inject').outerHTML = html;
-        const script = document.createElement('script');
-        script.src = 'js/accesibilidad.js';
-        document.body.appendChild(script);
+        const s = document.createElement('script');
+        s.src = 'js/accesibilidad.js';
+        document.body.appendChild(s);
       });
   </script>
 </body>
