--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <!-- animación de entrada que compartes con las demás vistas -->
   <script src="js/animacion-vista.js"></script>
   <script src="seguridad/seguridad.js" defer></script>
+  <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
 
   <!-- inyección de botón de ajustes + script de accesibilidad -->
   <script>
