--- a/pages/acciones.html
+++ b/pages/acciones.html
@@ -105,6 +105,7 @@
   <script src="../js/animacion-vista.js"></script>
   <script src="../js/acciones.js"></script>
   <script src="../seguridad/seguridad.js" defer></script>
+  <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
   <script>
     fetch('../ajustes.html')
       .then(r => r.text())
