--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,5 +108,6 @@
   <script src="../js/captcha-check.js" defer></script>
   <script src="../js/contacto.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
+  <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
 </body>
 </html>
