--- a/pages/cv.html
+++ b/pages/cv.html
@@ -109,5 +109,7 @@
   </script>
   <script src="../js/cv.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
+  <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
+
 </body>
 </html>
