--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <script src="js/animacion-vista.js"></script>
   <script src="seguridad/seguridad.js" defer></script>
   <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
+  <script src="js/performance-enhance.js" defer></script>
 
   <!-- inyección de botón de ajustes + script de accesibilidad -->
   <script>
