--- a/pages/acciones.html
+++ b/pages/acciones.html
@@ -105,7 +105,9 @@
   <script src="../js/animacion-vista.js"></script>
   <script src="../js/acciones.js"></script>
   <script src="../seguridad/seguridad.js" defer></script>
-  <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
+  <!-- en las páginas dentro de /pages/ -->
+<script src="../js/device-detect.js"></script>
+<script src="../js/performance-enhance.js" defer></script>
   <script>
     fetch('../ajustes.html')
       .then(r => r.text())
