--- a/pages/cv.html
+++ b/pages/cv.html
@@ -109,7 +109,9 @@
   </script>
   <script src="../js/cv.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
-  <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
+  <!-- en las páginas dentro de /pages/ -->
+    <script src="../js/device-detect.js"></script>
+    <script src="../js/performance-enhance.js" defer></script>
 
 </body>
 </html>
