--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -108,6 +108,8 @@
   <script src="../js/captcha-check.js" defer></script>
   <script src="../js/contacto.js" defer></script>
   <script src="../seguridad/seguridad.js" defer></script>
-  <script src="../js/device-detect.js"></script>   <!--  o  "js/device-detect.js" en index  -->
+  <!-- en las páginas dentro de /pages/ -->
+  <script src="../js/device-detect.js"></script>
+  <script src="../js/performance-enhance.js" defer></script>
 </body>
 </html>
